--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,24 +1,10 @@
 # Use a suitable base-image.
-FROM python:3-alpine
-
-# Create a seperate user and chown new directories if necessary
-RUN addgroup --system service
-RUN adduser --system --ingroup service --uid 1000 service
-
-# Create our mapped data volume endpoint
-RUN mkdir /data/
-
-# Copy our entrypoint.sh and make it executable
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
+FROM python:3.10.9-slim
 
 # Copy our service
-COPY src/ /service/
+COPY src/ /src/
+COPY main.py /
 
-# Change the working directory.
-WORKDIR /service/
-# Expose the service's port
-EXPOSE 8000
+RUN pip install -r src/requirements.txt
 
-# Run the service
-ENTRYPOINT ["/entrypoint.sh"]
+CMD gunicorn --bind 0.0.0.0:5000 main:app
