--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -4,7 +4,12 @@ FROM python:3.10.9-slim
 # Copy our service
 COPY src/ /src/
 COPY main.py /
+COPY entrypoint.sh /
+RUN chmod +x /entrypoint.sh
 
 RUN pip install -r src/requirements.txt
 
-CMD gunicorn --bind 0.0.0.0:9696 main:app
+# Run the service
+ENTRYPOINT ["/entrypoint.sh"]
+
+
