making the service robuster by introducing more or the proper amount of workers (4) and changing it so the random func is random same nasty bug as in previous email generation

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.10.9-slim
 # Copy our service
 COPY src/ /src/
 COPY main.py /
+COPY gunicorn.conf.py /
 COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
