test new c rsa calc in ci

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -9,6 +9,14 @@ COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
 RUN pip install -r src/requirements.txt
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        gcc \
+        libc-dev \
+        libgmp-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN gcc -o src/key_gen src/key_gen.c -lgmp
 
 #CMD gunicorn --bind 0.0.0.0:9696 main:app
 
